feat:
1. 新增PCI模板分组（兼容以前的代码生成工具的模板，基于Velocity模板）；
2. 增加注释截断配置项，某些情况下希望根据实际情况截断注释内容，提取简短的字段描述；
3. 增加生成Excel模板功能（仅限PCI模板分组），支持两种模式：（1）普通模式，直接生成Excel文件；（2）模板模式，通过模板文件导出；
4. 增加字典列配置功能（仅限单表生成配置）；
5. 支持多表配置和多表清除功能；
6. 优化模板中数据类型判断功能；
7. 支持更多的数据库类型=>Java类型的映射；
8. 增加更多的可配置变量和工具方法；

BREAKING CHANGE: 由于原代码在新版本的IDEA中无法正常编译，因此对插件的依赖支持版本及编译环境做了一个整体的升级：
1. gradle版本升级至8.6；
2. kotlin插件版本升级至1.9.22；
3. intellij插件版本升级至1.17.2；
4. 插件支持的最低IDEA版本调整至232（即2023.2.x）；
5. JDK版本升级至JDK17；
6. 所有的依赖升级至最新版本；